backend/src/main/java/com/example/petfinder/error/exception/unauthorized/InvalidPasswordException.java
package com.example.petfinder.error.exception.unauthorized;

public class InvalidPasswordException extends RuntimeException {

    public InvalidPasswordException() {
        super("Invalid password");
    }
}
